# ManoVarta

./: .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.cloudrun-aya  Dockerfile.cloudrun-gpu  Makefile  ManoVarta_Phase1_Presentation.pptx  ManoVarta_Phase1_Presentation_UBTemplate.pptx  README.md  README_phase1.md  architecture_diagram_mermaid.md  cloudbuild.cloudrun-aya.yaml  cloudbuild.cloudrun-gpu.yaml  data_nuance_strategy.md  data_schema.md  docker-compose.demo.yml  end_to_end_roadmap.md  evaluation_plan.md  manage.py  milestone1_slides_v2.pptx  milestone_plan.md  phase1_report.md  phase1_report_acl.docx  phase1_slides_outline.md  pyproject.toml  references.md  render.yaml  vast_training.md
.codex_tmp/: colab_daic_cell.py.txt  colab_daic_cell_short.py.txt  colab_daic_compact.py.txt
_old_outputs/: MindBridge_Phase1_Presentation.pptx  MindBridge_Phase1_Presentation_UBTemplate.pptx
docs/: architecture.md  data-and-training.md  deployment.md  testing.md
manovarta_admin/: __init__.py  asgi.py  settings.py  wsgi.py
manovarta_core/: __init__.py  api.py  async_scoring.py  config.py  daic_woz.py  dialogue.py  engine.py  gold_data.py  item_ids.py  json_utils.py  knowledge.py  lexicon.py  llm.py  metrics.py  profiles.py  questionnaires.py  reporting.py  safety.py  safety_assessors.py  schemas.py  scoring.py  seed_data.py  semantic_safety.py  sessions.py  text.py  training_data.py  voice.py
reports/: ai_assisted_completion_report_20260410.md  aya_colab_eval_a100_20260328.json  aya_daic_continue_full_eval_20260413.json  best_current_system_report.json  best_current_system_report.md  conversation_steering_roadmap.md  eval_bundle.json  eval_bundle.md  final_assignment_completion_report.json  final_assignment_completion_report.md  final_submission_manifest_20260413.md  gap_scope_assessment.md  gold_adjudication_status.json  gold_adjudication_status.md  gold_dataset_status.json  gold_dataset_status.md  gold_progress_dashboard.json  gold_progress_dashboard.md  hybrid_runtime_validation_colab_20260404.json  impact_report.md  live_runtime_eval_20260404.json  live_runtime_eval_local_20260410.json  local_safety_checkpoint_default_runtime_eval.json  public_dataset_sourcing_report_20260409.md  reviewer_queue_annotator_b.csv  reviewer_workflow_pack.json  reviewer_workflow_pack.md  ship_note_2026-04-04.md  strict_compliance_repo_audit_20260409.md  strict_compliance_repo_audit_20260410.md
screening/: __init__.py  admin.py  models.py
tests/: test_api.py  test_artifacts.py  test_assignment_report.py  test_async_scoring.py  test_colab_pipeline.py  test_config.py  test_daic_continue.py  test_daic_fetch_transcripts.py  test_daic_woz.py  test_dialogue.py  test_engine.py  test_fetch_daic_woz.py  test_fetch_edaic_public.py  test_gold_data.py  test_gold_dataset_tools.py  test_import_edaic_english_public.py  test_import_indicvoices_hindi_valid.py  test_json_utils.py  test_llm.py  test_safety.py  test_safety_assessors.py  test_scoring.py  test_seed_data.py  test_training_data.py  test_vertex_pipeline.py
tools/: annotate_gold_labels.py  aya_adapter_probe.py  bootstrap_hindi_dual_annotations.py  build_annotation_packets.py  build_gold_annotation_packets.py  build_submission_assets.py  build_ub_template_presentation.py  colab_aya_eval_launcher.py  colab_bootstrap.py  colab_sync_repo.py  (+53 more)
(+743 files in other folders)
