[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manovarta"
version = "0.1.0"
description = "Text-first multilingual screening prototype for PHQ-9 and GAD-7 aligned conversations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.0",
  "django==4.2.20",
  "pydantic>=2.10,<=2.12.3",
  "huggingface_hub>=0.34.0,<1.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.5",
]
gpu = [
  "torch>=2.2",
  "transformers>=4.51.0",
  "peft>=0.18.0",
  "bitsandbytes>=0.45.0",
]
train = [
  "torch>=2.2",
  "transformers>=4.51.0",
  "datasets>=3.0.0",
  "accelerate>=1.0.0",
  "trl>=0.11.0",
  "peft>=0.18.0",
  "numpy>=1.26.0",
  "sentencepiece>=0.2.0",
]
train-cuda = [
  "bitsandbytes>=0.45.0",
]
vertex = [
  "google-cloud-aiplatform>=1.122.0",
  "google-cloud-storage>=2.18.0",
  "remotezip>=0.12.3",
]
runtime-cloud = [
  "google-cloud-aiplatform>=1.122.0",
  "google-cloud-storage>=2.18.0",
  "google-cloud-speech>=2.31.0",
  "google-cloud-texttospeech>=2.17.2",
  "torch>=2.2",
  "transformers>=4.51.0",
  "sentencepiece>=0.2.0",
  "peft>=0.18.0",
  "bitsandbytes>=0.45.0",
]

[tool.setuptools.packages.find]
include = ["manovarta_core*", "manovarta_admin*", "screening*", "training*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
